k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-1-dev-service
  namespace: app-1-dev
spec:
  type: ClusterIP
  selector:
    app: app-1-dev
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
