k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-1-dev-ingress
  namespace: app-1-dev
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev-app-1.com
      secretName: app-1-dev-tls
  rules:
    - host: dev-app-1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-1-dev-service
                port:
                  number: 80
